--- a/css/styles.css
+++ b/css/styles.css
@@ -1,3 +1,8 @@
+:root {
+    --container-size: 80vh;
+}
+
+
 html {
     box-sizing: border-box;
 }
@@ -6,4 +11,35 @@ html {
     box-sizing: inherit;
     padding: 0;
     margin: 0;
+}
+
+body {
+    height: 100vh;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-evenly;
+}
+
+.container {
+    display: flex;
+    width: var(--container-size);
+    height: var(--container-size);
+    justify-content: center;
+    flex-wrap: wrap;
+    border: 1px solid black;
+}
+
+.grid-item {
+    flex-grow: 1;
+    
+}
+
+.hovered {
+    background-color: black;
+}
+
+.redraw-btn {
+    width: 150px;
+    height: 50px;
 }
